--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-python-dotenv
-faust
-oci
+# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
